Set up windows + linux + macOS release process